<resources>
    <string name="app_name">FitnessAlarm</string>
    <string name="yourAlarms">Your Alarms</string>
    <string name="add">Add+..</string>
    <string name="set">Set Alarm</string>
    <string name="unset">Unset Alarm</string>
    <string name="delete">Delete Alarm</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="repeat">Repeat</string>
    <string-array name="spinner1">
        <item>Reverie</item>
        <item>Music to Moon</item>
        <item>Considering Lies</item>
        <item>Rooms for Emptiness</item>
    </string-array>
    <string-array name="spinner2">
        <item>Choose an Avatar</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <string name="qr">QRCODE</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="textdisclaimer">"This app is made for all people who want to keep a healthy lifestyle.
        In order to make this app, help from the website https://pixabay.com/ as it gives images free of cost and for commercial use.
        The links to images are
        https://pixabay.com/en/antique-rose-past-vintage-1802814/
        https://pixabay.com/en/background-paper-asian-flower-1424764/
        https://pixabay.com/en/abstract-pattern-surface-texture-1867395/
        https://pixabay.com/en/dead-leaf-white-background-light-1927918/
        https://pixabay.com/en/spring-daffodils-yellow-green-2150559/
        https://pixabay.com/en/texture-background-paper-papyrus-2012078/
        The thumbnails for these images are generated by the owner of the app.
        As the images can be used for commercial use so these images have also been used as thumbnails."
        The music in the app have been taken from http://dig.ccmixter.org which is free for commercial use
        The music used in the website is a work of the artist name _ghost as mentioned in the website URL http://dig.ccmixter.org/people/_ghost
        Four music audios have been taken from this website from the following URLS
        http://dig.ccmixter.org/files/_ghost/25389
        http://dig.ccmixter.org/files/_ghost/31006
        http://dig.ccmixter.org/files/_ghost/6342
        http://dig.ccmixter.org/files/_ghost/15813
        The QR code is from the website http://goqr.me/
        As the website says "QR codes created on goQR.me are completely free of charge (commercial and print usage allowed, including advertising)"
        We do not take any responsibility of keeping your data safe in this app or your phone under any circumstances.
        Used zxing library for QR code scanning
        I am using firebase and admob in my project but i am not collecting any user data.
        The connection is there for future implementation.
        I will change my privacy policy if i update my app with user information being used by my app.
        https://github.com/navjotnvy/priavcypolicy/blob/master/privacy.txt
</string>
    <string name="pushtext"><center>INSTRUCTIONS:</center>"\n"It is important to have a front light(not a flash light) on your phone to do pushups. Do the pushups in a room full of light. Every time you do a pushup make sure that your head comes on top of the front camera. Do not move the phone or the pushup count will be reset. We want you to be healthy. HAVE FUN! </string>
    <string name="addbutton">Add Alarm "                 "+</string>
    <string name="alarm">Alarm</string>
    <string name="profile">Profile</string>
    <string name="setting">Settings</string>
    <string name="exit">Exit</string>
    <string name="repeaton">Repeat EveryDay</string>
    <string name="repeatoff">Do not Repeat </string>
    <string name="picksong">Music</string>
    <string name="splashtext"> Not Just An Alarm </string>
    <string name="alarmname"> Alarm Name : </string>
    <string name="back"> Back </string>
    <string name="name"> Name </string>
    <string name="sunday"> SU </string>
    <string name="monday"> MO </string>
    <string name="tuesday"> TU </string>
    <string name="wednesday"> WE </string>
    <string name="thursday"> TH </string>
    <string name="friday"> FR </string>
    <string name="saturday"> SA </string>
    <string name="volume"> Volume: </string>
    <string name="yourprofile"> Your Profile </string>
    <string name="exercises"> Pushup Exercise: </string>
    <string name="changetheme"> Change Theme: </string>
    <string name="bmi"> Calculate BMI: </string>
    <string name="save">Save</string>
    <string name="entername">Enter your name</string>
    <string name="enterweight">Weight in Pounds</string>
    <string name="enterheight">Height in inches</string>
    <string name="title_activity_maps">Map</string>
    <string name="wakeuptime">Time took to wakeup :</string>
    <string name="banner_ad_unit_id">ca-app-pub-5484380991156000/7269210973</string>
    <string name="BodyMassIndex">Body Mass Index :</string>
    <string name="profileplus">Profile+</string>
    <string name="download">CLICK HERE"\n"Download and print qrcode to turn off alarm</string>
</resources>


