<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.navjot.faceproject.alarmforhealth.Set_Alarms"
    android:orientation="vertical"
    android:background="@drawable/yellowpainting"
    android:id="@+id/activity_set_alarms">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button13"
        android:text="@string/download"
        android:background="@color/cast_expanded_controller_ad_label_background_color" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.36"
        android:weightSum="1">

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/timePicker"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:timePickerMode="spinner"
            android:layout_alignParentStart="true" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_weight="0.07">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/group">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeaton"
                android:id="@+id/radioButton"
                android:layout_weight="1"
                android:checked="false"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeatoff"
                android:id="@+id/radioButton2"
                android:layout_weight="1"
                android:checked="false"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.07">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picksong"
            android:id="@+id/textView2"
            android:textSize="25dp"
            android:layout_weight="0.2"
            android:layout_gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:entries="@array/spinner1"
            android:focusableInTouchMode="false"
            android:layout_weight="1"
            android:layout_gravity="center" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:gravity="top|center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:id="@+id/set"
            android:onClick="onClick1"
            android:clickable="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unset"
            android:id="@+id/unset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/delete1" />
    </LinearLayout>

</LinearLayout>