<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_pushups"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.navjot.faceproject.alarmforhealth.Pushups"
    android:background="@drawable/yellowpainting"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="0.7"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/pushtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_centerHorizontal="false"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_above="@+id/imageView2"
            android:layout_alignParentTop="true" />

        <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button16"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            />

        <com.google.android.gms.ads.AdView
            android:layout_width="601dp"
            android:layout_height="100sp"
            android:id="@+id/adView"
            android:layout_weight="1"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_above="@+id/button15"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:srcCompat="@drawable/pushupimg"
            android:id="@+id/imageView2"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button15"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="Pushup Counter"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:id="@+id/secondsensor"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:layout_weight="0.38"
            android:layout_above="@+id/adView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</RelativeLayout>
