<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.navjot.faceproject.alarmforhealth.Profile"
    android:background="@drawable/yellowpainting">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="0.3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="411dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="95dp"
                    android:layout_height="88dp"
                    android:id="@+id/imageView4"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/alarmsplash" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/textView5"
                    android:hint="Your Name"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:id="@+id/textView4"
                    android:text="@string/wakeuptime"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_below="@+id/textView7"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:id="@+id/textView3"
                    android:text="@string/BodyMassIndex"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_below="@+id/textView4"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Button
                    android:text="Click and register your Walk:"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button9"
                    android:background="#1f313030"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_below="@+id/textView9"
                    android:layout_marginTop="30dp"/>


                <Button
                    android:text="Click and register your pushup exercise:"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button10"
                    android:background="#1f313030"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_below="@+id/textView9"
                    android:layout_marginTop="30dp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textView16"
                    android:hint="Daily Quotes"
                    android:hyphenationFrequency="none"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="26sp"
                    android:background="#1f313030"
                    android:layout_marginTop="19dp"
                    android:layout_below="@+id/button18"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:weightSum="0.7">

            <Button
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button15"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

            <Button
                android:text="@string/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button16"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>

